examples/aws-rust-loco/tests/requests/snapshots/can_get_current_user_with_api_key@user_request.snap
---
source: tests/requests/user.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"pid\":\"PID\",\"name\":\"loco\",\"email\":\"test@loco.com\"}",
)
